<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/newicon"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_reminders"
        android:icon="@drawable/ic_access_alarm_black_24dp"
        android:title="@string/reminders" />

    <item
        android:id="@+id/navigation_articals"
        android:icon="@drawable/ic_web_black_24dp"
        android:title="@string/articals" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/account" />

</menu>