<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NotificationsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/sky"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_weight="1"
            android:text="CATAGORIES"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="60dp"
            android:textColor="@color/whiteColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_weight="1"
            android:text="FAVOURITES"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/whiteColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/whiteColor"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
     <LinearLayout
    android:orientation="vertical"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

                <TextView
                    android:text="Seriously,this the HIGH"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="EST.DISCOUNT.EVER! "
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/black_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

</LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:text="Monday , 05:00 PM"
                    android:textSize="12dp" />

            </LinearLayout>

            <TextView
                android:text="@string/order"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/whiteColor"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Order Medicine is"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/black_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="Now Easy - Peasy! "
                        android:textSize="14dp"
                        android:textStyle="bold"
                        android:textColor="@color/black_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:text="Yesterday , 04:15 PM"
                    android:layout_gravity="center"
                    android:textSize="12dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:text="@string/step1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/step2"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
            android:text="@string/step3"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/whiteColor"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Seriously,this the HIGH"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/black_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="EST.DISCOUNT.EVER! "
                        android:textSize="14dp"
                        android:textStyle="bold"
                        android:textColor="@color/black_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:text="Yesterday , 04:15 PM"
                    android:layout_gravity="center"
                    android:textSize="12dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:text="@string/order"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_gravity="center"
        android:textColor="@color/whiteColor"
        android:textSize="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>